<resources>
    <string name="app_name">ApInsta</string>
    <string name="dummy_username">aviral_3101</string>
    <string name="random_posts">258</string>
    <string name="posts">Posts</string>
    <string name="random_followers">1458</string>
    <string name="Followers">Followers</string>
    <string name="random_folllowing">758</string>
    <string name="following">Following</string>
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="dummy_display_name">Aviral Kaushik</string>
    <string name="dummy_description">Software + Android + Web Developer</string>
    <string name="dummy_website">http://aviralkaushik.epizy.com</string>
    <string name="settings">Settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="edit_profile"> Edit Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="save_changes">Save Changes</string>
    <string name="back">back</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="username">Username</string>
    <string name="display_name">Display Name</string>
    <string name="website">Website</string>
    <string name="description">Description</string>
    <string name="private_information">PRIVATE INFORMATION</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">No account yet? Create one</string>
    <string name="please_wait">Please wait</string>
    <string name="instagram_logo">Instagram Logo</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="register_to_login">Have an Account? Login</string>
    <string name="auth_failed">Authentication Failed! Please ry Again!</string>
    <string name="user">users</string>
    <string name="user_account_settings">user_account_settings</string>
    <string name="confirm_sign_out_text">Are You Sure, you want to Sign Out!</string>
    <string name="signOutText">SignOut</string>
    <string name="cancel">Cancel</string>
    <string name="signing_out">Signing Out!</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="calling_activity">calling_activity</string>
    <string name="profile_activity">Profile Activity</string>
    <string name="field_username">username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm">CONFIRM</string>
    <string name="confirm_password_dialog">ConfirmPasswordDialog</string>
    <string name="field_email">email</string>
    <string name="field_display_name">display_name</string>
    <string name="field_website">website</string>
    <string name="field_description">description</string>
    <string name="field_phone_number">phone_number</string>
    <string name="gallery">Gallery</string>
    <string name="photo">Photo</string>
    <string name="open_camera">Open Camera</string>
    <string name="gallery_image">Gallery Image</string>
    <string name="next">Next</string>
    <string name="selected_image">Selected Image</string>
    <string name="write_a_description">Write a Description....</string>
    <string name="share_image">Share Image</string>
    <string name="share">Share</string>
    <string name="field_photos">photos</string>
    <string name="field_user_photos">user_photos</string>
    <string name="new_photo">new_photo</string>
    <string name="profile_photo">profile_photo</string>
    <string name="return_to_fragment">return_to_fragment</string>
    <string name="edit_profile_fragment">Edit Profile</string>
    <string name="selected_bitmap">selected_bitmap</string>
    <string name="more">More</string>
    <string name="heart">Heart</string>
    <string name="dummy_likes_desc">Liked by aviral_3101, avi.kaushik11, pallavi.kaushik and 30 others</string>
    <string name="dummy_image_caption">Lovely Mountains Range! Lovely trip! #Lovelu #Travel #memorable #mountains</string>
    <string name="dummy_comments_count_text">View all 3 comments</string>
    <string name="dummy_post_time_stamp">3 DAYS AGO</string>
    <string name="activity_number">activity_number</string>
    <string name="view_post_fragment">View Post</string>
    <string name="days_ago">DAYS AGO</string>
    <string name="today">TODAY</string>
    <string name="field_user_id">user_id</string>
    <string name="field_likes">likes</string>
    <string name="field_caption">caption</string>
    <string name="field_date_created">date_created</string>
    <string name="field_photo_id">photo_id</string>
    <string name="field_tags">tags</string>
    <string name="field_image_path">image_path</string>
    <string name="add_a_comment">Add a comment…</string>
    <string name="post_comment">Post Comment</string>
    <string name="comments">Comments</string>
    <string name="dummy_comment">This is a comment</string>
    <string name="dummy_comment_time">3 d</string>
    <string name="dummy_comment_like">20 likes</string>
    <string name="comment_replay">Reply</string>
    <string name="comment_like">Comments Like</string>
    <string name="view_comment_fragment">View Comments</string>
    <string name="field_comments">comments</string>
    <string name="search">Search</string>
    <string name="search_avtivity">Search Activity</string>
    <string name="intent_user">intent_user</string>
    <string name="view_profile_fragment">View Profile</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="field_following">following</string>
    <string name="field_followers">followers</string>
    <string name="dummy_email">zaviralkaushik@gmail.com</string>
    <string name="main_activity">Main Activity</string>
    <string name="bundle_photo">bundle_photo</string>
    <string name="bundle_user_account_settings">bundle_user_account_settings</string>
</resources>