<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold|italic"
            android:id="@+id/confirmSignOut"
            android:text="@string/confirm_sign_out_text"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="100dp"
            android:text="@string/signOutText"
            android:textStyle="italic|bold"
            android:textColor="@color/white"
            android:id="@+id/sign_out"
            android:padding="12dp"
            android:background="@drawable/blue_round_button_background"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="200dp"
            android:text="@string/cancel"
            android:textStyle="italic|bold"
            android:textColor="@color/black"
            android:id="@+id/cancel_sign_out"
            android:padding="12dp"
            android:background="@drawable/white_round_background_button"/>

    </RelativeLayout>

    <ProgressBar
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/sign_out_progress_bar"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/signing_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signing_out"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_alignBottom="@+id/sign_out_progress_bar"
        android:layout_alignRight="@+id/sign_out_progress_bar"
        android:layout_alignLeft="@+id/sign_out_progress_bar"
        android:layout_alignEnd="@+id/sign_out_progress_bar"
        android:layout_alignStart="@+id/sign_out_progress_bar" />

</RelativeLayout>