<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

   <de.hdodenhof.circleimageview.CircleImageView
       android:layout_width="45dp"
       android:layout_height="45dp"
       android:id="@+id/comment_profile_image"
       android:layout_marginTop="15dp"
       android:layout_marginLeft="20dp"
       android:src="@drawable/ic_launcher_foreground"
       app:civ_border_color="@color/black"
       app:civ_border_width="0.5dp"
       android:layout_marginStart="20dp" />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relLayout1"
        android:layout_toRightOf="@id/comment_profile_image"
        android:layout_marginTop="15dp"
        android:background="@drawable/grey_border_bottom"
        android:layout_toEndOf="@id/comment_profile_image">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="60dp"
            tools:ignore="RelativeOverlap">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_username"
                android:id="@+id/comment_username"
                android:layout_marginLeft="15dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_comment"
                android:layout_marginLeft="5dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_toRightOf="@+id/comment_username"
                android:id="@+id/comment"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/comment_username" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_comment_time"
                android:textColor="@color/grey"
                android:textSize="14sp"
                android:id="@+id/comment_time_posted"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_below="@+id/comment"
                android:layout_marginStart="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_comment_like"
                android:textStyle="bold"
                android:textColor="@color/grey"
                android:textSize="14sp"
                android:id="@+id/comment_likes"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_below="@+id/comment"
                android:layout_toRightOf="@+id/comment_time_posted"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@+id/comment_time_posted" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment_replay"
                android:textStyle="bold"
                android:textColor="@color/grey"
                android:textSize="14sp"
                android:id="@+id/comment_reply"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_below="@+id/comment"
                android:layout_toRightOf="@+id/comment_likes"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@+id/comment_likes" />



        </RelativeLayout>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/comment_like"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_heart_white"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/comment_like"/>



    </RelativeLayout>

</RelativeLayout>