<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/relLayout1"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/profile_photo"
                    android:layout_marginTop="20dp"
                    app:civ_border_color="@color/black"
                    app:civ_border_width="0.5dp"
                    android:layout_marginLeft="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="25dp" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/dummy_username"
                    android:layout_toRightOf="@id/profile_photo"
                    android:layout_marginLeft="20dp"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/profile_photo"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"
                    tools:ignore="RelativeOverlap" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_more"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:id="@+id/ivEllipses"
                    android:contentDescription="@string/more"/>

            </RelativeLayout>

            <com.aviral.apinsta.Utils.SquareImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/post_image"
                android:layout_below="@id/relLayout1"
                android:scaleType="centerCrop"/>

            <RelativeLayout
                android:id="@+id/relLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/post_image"
                android:background="@color/white">

                <RelativeLayout
                    android:id="@+id/heart_layout"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:background="@color/white">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:id="@+id/image_heart_red"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/ic_heart_red"
                        android:contentDescription="@string/heart"
                        android:visibility="invisible"/>

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:id="@+id/image_heart"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/ic_heart_white"
                        android:contentDescription="@string/heart"
                        android:visibility="visible"/>


                </RelativeLayout>

                <!--Comments-->
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:id="@+id/ic_bubble_speech"
                    android:layout_toRightOf="@id/heart_layout"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/ic_speech_bubble"
                    android:contentDescription="@string/heart"
                    android:visibility="visible"
                    android:layout_toEndOf="@id/heart_layout"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relLayout3"
                android:layout_below="@id/relLayout2"
                android:padding="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_likes_desc"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:id="@+id/image_likes"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_image_caption"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:id="@+id/image_caption"
                    android:layout_below="@+id/image_likes"
                    android:layout_marginTop="15dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_comments_count_text"
                    android:textColor="@color/grey"
                    android:textSize="18sp"
                    android:layout_below="@+id/image_caption"
                    android:id="@+id/image_comments_link"
                    android:layout_marginTop="15dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_post_time_stamp"
                    android:textColor="@color/grey"
                    android:textSize="18sp"
                    android:layout_below="@+id/image_comments_link"
                    android:id="@+id/image_time_posted"
                    android:layout_marginTop="15dp"/>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

    <include layout="@layout/layout_bottom_navigation_view"/>

</RelativeLayout>